k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chat-app
  labels:
    name: chat-app
    app: chatbuddy
